--- a/web/templates/web/project.html
+++ b/web/templates/web/project.html
@@ -1,7 +1,62 @@
 {% extends 'web/base.html' %}
 
+{% block title %} - {{project.name}} {% endblock title %}
 
 {% block content %}
-<h1>{{ project.name }}</h1>
+<h1>{{ project.name }} - Status: {{ project.get_status_display }}</h1>
+<h2>{{ project.tagline }}</h2>
+<h4>Project Description</h4>
 <p>{{ project.description }}</p>
-{% endblock %}
+<h4>Project Impact</h4>
+<p>{{ project.impact }}</p>
+<h4>Project Lead</h4>
+<p>{{ project.lead }}</p>
+<h4>Project Priority</h4>
+<p> {{ project.get_priority_display }}</p>
+
+<h3>Level of Effort</h3>
+<h4>State Tech Staff Effort</h4>
+<p> Resources: {{ project.tech_effort }}</p>
+<h4>State Agency Staff Effort</h4>
+<p> Resources: {{ project.agency_effort }}</p>
+<h4>Contractor Staff Effort</h4>
+<p> Resources: {{ project.contractor_effort }}</p>
+
+<h3>Project Timeline</h3>
+<h4>Projected or Actual Start Date</h4>
+<p> {{ project.start_date }}</p>
+<h4>Projected or Actual Go-Live Date</h4>
+<p> {{ project.go_live_date }}</p>
+
+<h4>Blockers</h4>
+<p> {{ project.blockers }}</p>
+
+{% if project.live_site_url %}
+<h4>Live Site URL</h4>
+<p> {{ project.live_site_url }}</p>
+{% endif %}
+
+{% if project.github_url %}
+<h4>GitHub Repository</h4>
+<p> {{ project.github_url }}</p>
+{% endif %}
+
+<h4>Billable</h4>
+<p class="help_text">{{ project.is_billable.help_text }}</p>
+<p> {{ project.is_billable }}</p>
+<h4>Cloud.gov Project?</h4>
+<p> {{ project.cloud_dot_gov }}</p>
+<h4>RIFANS Account Number</h4>
+<p> {{ project.rifans_number }}</p>
+<h4>ETSS Business Unit</h4>
+<p> {{ project.business_unit }}</p>
+<h4>Project Categories</h4>
+    {% if project.categories %}
+        <ul>
+        {% for category in project.categories.all %}
+            <li>{{ category.name }}</li>
+        {% endfor %}
+        </ul>
+    
+    {% endif %}
+{% endblock content %}
