Unsuccessfully try grid-layout with USDS standards.

--- a/web/templates/web/base_usds.html
+++ b/web/templates/web/base_usds.html
@@ -18,7 +18,8 @@
           <em class="usa-logo-text">
             <a href="/" accesskey="1" title="Home" aria-label="Home">
               <img src="/static/img/logo.png" class="align-middle" width="200">
-              <span class="bold gray">/projects</span>
+              <span>/projects</span>
+            </button>
               </a>
           </em>
         </div>
@@ -36,7 +37,7 @@
       </nav>
     </div>
   </header>
-  <div class="usa-overlay">
+  <div class="usa-overlay"></div>
   <main id="main-content">
     <div class="usa-alert usa-alert-warning">
       <div class="usa-alert-body">
@@ -46,7 +47,7 @@
     </div>
     {% block content %}{% endblock %}
     </main>
-    </div>
+    
   </div>
   
       
