--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -5,16 +5,14 @@
   <title>Rhode Island Office of Digital Excellence{% block title %}{% endblock %}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-  <link href="/static/build/main.css" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="/static/css/skull.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="h6 p1 bg-black white center caps">Work in Progress</div>
+  <div class="h6 p1 bg-blue white center caps">Work in Progress</div>
   <div class="container px2 py3">
     <div class="mb4">
-      <a href="/" class="h1 p0 btn">
-        <img src="/static/img/logo.png" class="align-middle" width="200">
-        <span class="bold gray">/projects</span>
-      </a>
+      <a href="/" class="h1 p0 btn items-center"><img src="/static/img/logo.png" class="align-middle" width="250"><span class="bold black">/projects</span></a>
     </div>
     {% block content %}{% endblock %}
   </div>
