--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -11,10 +11,10 @@
 </form>
 <div class="flex flex-wrap mxn2">
 {% for p in projects %}
-  <div class="col-12 sm-col-6 md-col-4 border-box p2">
+  <div class="column-4 border-box p2">
     <div class="p2 bg-white border rounded">
       <a class="h4 caps bold mb1 block black" href="{% url 'web:project' p.pk %}">
-        <span class="right"><i class="icon ion-help-circled"></i></span>
+        <span class="right"><i class="icon ion-help-circled blue"></i></span>
         {{ p.name }}
       </a>
       <div class="mb2">
@@ -22,16 +22,16 @@
       </div>
       {% if p.client %}
       <div class="h6 mb2">
-        Developed with <span class="bold underline">{{ p.client.agency }}</span>
+        Developed with <span class="bold underline">{{ p.client }}</span>
       </div>
       {% endif %}
       <div class="h3">
-        {% if p.live_site_url %}
-        <a href="{{ p.live_site_url }}" class="black"><i class="icon ion-share"></i></a>&nbsp;
-        {% endif %}
-        {% if p.github_url %}
-        <a target="_blank" href="{{ p.github_url }}" class="black"><i class="icon ion-code-working"></i></a>
-        {% endif %}
+      {% if p.live_site_url %}
+          <a target="_blank" href="{{ p.live_site_url }}" class="black"><i class="icon ion-share"></i></a>&nbsp;
+      {% endif %}
+      {% if p.github_url %}
+          <a target="_blank" href="{{ p.github_url }}" class="black"><i class="icon ion-code-working"></i></a>
+      {% endif %}
       </div>
     </div>
   </div>
