--- a/web/templates/web/project.html
+++ b/web/templates/web/project.html
@@ -3,60 +3,181 @@
 {% block title %} - {{project.name}} {% endblock title %}
 
 {% block content %}
-<h1>{{ project.name }} - Status: {{ project.get_status_display }}</h1>
-<h2>{{ project.tagline }}</h2>
-<h4>Project Description</h4>
-<p>{{ project.description }}</p>
-<h4>Project Impact</h4>
-<p>{{ project.impact }}</p>
-<h4>Project Lead</h4>
-<p>{{ project.lead }}</p>
-<h4>Project Priority</h4>
-<p> {{ project.get_priority_display }}</p>
+<div class="clearfix">
+        <h1>{{ project.name }}</h1>
+        <div class="h3">
+            {% if p.live_site_url %}
+                <a target="_blank" href="{{ p.live_site_url }}" class="black"><i class="icon ion-share"></i></a>
+            {% endif %}
+            {% if p.github_url %}
+                <a target="_blank" href="{{ p.github_url }}" class="black">
+                    <i class="icon ion-code-working"></i>
+                </a>
+            {% endif %}
+        </div>
+        {% if p.client %} 
+        <h3> Developed in partnership with <span class="bold underline">{{ p.client }}</span>.
+        </h3>
+        {% endif %}
+        <div class="h3">{{ project.tagline }}</div>
+        
+        
+        <section id="overview-data" class="container px2 py4 overflow-hidden">
+            <h2>Overview</h2>
+            <div class="overflow-auto">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Status</th>
+                            <th>Priority</th>
+                            <th>Project Lead</th>
+                            <th>Cloud.gov Project?</th>
+                            <th>Projected/Actual Start Date</th>
+                            <th>Projected/Actual Go-Live Date</th>
+                            <th>Billable</th>
+                            <th>RIFANS Account Number</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                {{ project.get_status_display }}
+                            </td>
+                            <td>
+                                {{ project.get_priority_display }}
+                            </td>
+                            <td>
+                                {{ project.project_lead }}
+                            </td>
+                            <td>
+                                {% if project.cloud_dot_gov == True %}
+                                   <i class="icon ion-checkmark-circled green"></i>
+                                {% else %}
+                                    <i class="icon ion-close-round red"></i>
+                                {% endif %}
+                            </td>
+                            <td>
+                                <i class="icon ion-calendar p1"></i>{{ project.start_date }}
+                            </td>
+                            <td>
+                                <i class="icon ion-calendar p1"></i>{{ project.go_live_date }}
+                            </td>
+                            <td>
+                                {% if project.billable == True %}
+                                   <i class="icon ion-checkmark-circled green"></i>
+                                {% else %}
+                                    <i class="icon ion-close-round red"></i>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {{ project.rifans_number }}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <h3>Level of Effort</h3>
+            <div class="overflow-auto">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>State Tech Staff Required</th>
+                            <th>State Agency Staff Required</th>
+                            <th>Contractor Staff Required</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                {{ project.tech_effort }}
+                            </td>
+                            <td>
+                                {{ project.agency_effort }}
+                            </td>
+                            <td>
+                                {{ project.contractor_effort }}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section id="narrative" class="container px2 py4 overflow-hidden">
+            <div class="column-12"><h4>Description</h4></div>
+            <div class="column-12"><p>{{ project.description }}</p></div>
+            <div class="column-12"><h4>Impact</h4></div>
+            <div class="column-12"><p>{{ project.impact }}</p></div>
+            <div class="column-12"><h4>Blockers</h4></div>
+            <div class="column-12"><p>{{ project.blockers }}</p></div>
+            <div class="column-12"><h4>Categories</h4></div>
+            <div class="column-12">
+                <p>
+                {% if project.categories %}
+                    <ul>
+                        {% for category in project.categories.all %}
+                        <li>{{ category.name }}</li>
+                        {% endfor %}
+                    </ul>
+        
+                {% endif %}
+                </p>
+            </div>
+        </section>
+        
 
-<h3>Level of Effort</h3>
-<h4>State Tech Staff Effort</h4>
-<p> Resources: {{ project.tech_effort }}</p>
-<h4>State Agency Staff Effort</h4>
-<p> Resources: {{ project.agency_effort }}</p>
-<h4>Contractor Staff Effort</h4>
-<p> Resources: {{ project.contractor_effort }}</p>
-
-<h3>Project Timeline</h3>
-<h4>Projected or Actual Start Date</h4>
-<p> {{ project.start_date }}</p>
-<h4>Projected or Actual Go-Live Date</h4>
-<p> {{ project.go_live_date }}</p>
-
-<h4>Blockers</h4>
-<p> {{ project.blockers }}</p>
-
-{% if project.live_site_url %}
-<h4>Live Site URL</h4>
-<p> {{ project.live_site_url }}</p>
-{% endif %}
-
-{% if project.github_url %}
-<h4>GitHub Repository</h4>
-<p> {{ project.github_url }}</p>
-{% endif %}
-
-<h4>Billable</h4>
-<p class="help_text">{{ project.is_billable.help_text }}</p>
-<p> {{ project.is_billable }}</p>
-<h4>Cloud.gov Project?</h4>
-<p> {{ project.cloud_dot_gov }}</p>
-<h4>RIFANS Account Number</h4>
-<p> {{ project.rifans_number }}</p>
-<h4>ETSS Business Unit</h4>
-<p> {{ project.business_unit }}</p>
-<h4>Project Categories</h4>
-    {% if project.categories %}
-        <ul>
-        {% for category in project.categories.all %}
-            <li>{{ category.name }}</li>
-        {% endfor %}
-        </ul>
+    <h4>Project Description</h4>
+    <p>{{ project.description }}</p>
+    <h4>Project Impact</h4>
+    <p>{{ project.impact }}</p>
+    <h4>Project Lead</h4>
+    <p>{{ project.project_lead }}</p>
+    <h4>Project Priority</h4>
+    <p> {{ project.get_priority_display }}</p>
     
+    <h3>Level of Effort</h3>
+    <h4>State Tech Staff Effort</h4>
+    <p> Resources: {{ project.tech_effort }}</p>
+    <h4>State Agency Staff Effort</h4>
+    <p> Resources: {{ project.agency_effort }}</p>
+    <h4>Contractor Staff Effort</h4>
+    <p> Resources: {{ project.contractor_effort }}</p>
+    
+    <h3>Project Timeline</h3>
+    <h4>Projected or Actual Start Date</h4>
+    <p> {{ project.start_date }}</p>
+    <h4>Projected or Actual Go-Live Date</h4>
+    <p> {{ project.go_live_date }}</p>
+    
+    <h4>Blockers</h4>
+    <p> {{ project.blockers }}</p>
+    
+    {% if project.live_site_url %}
+    <h4>Live Site URL</h4>
+    <p> {{ project.live_site_url }}</p>
     {% endif %}
+    
+    {% if project.github_url %}
+    <h4>GitHub Repository</h4>
+    <p> {{ project.github_url }}</p>
+    {% endif %}
+    
+    <h4>Billable</h4>
+    <p class="help_text">{{ project.is_billable.help_text }}</p>
+    <p> {{ project.is_billable }}</p>
+    <h4>Cloud.gov Project?</h4>
+    <p> {{ project.cloud_dot_gov }}</p>
+    <h4>RIFANS Account Number</h4>
+    <p> {{ project.rifans_number }}</p>
+    <h4>ETSS Business Unit</h4>
+    <p> {{ project.business_unit }}</p>
+    <h4>Project Categories</h4>
+        {% if project.categories %}
+            <ul>
+            {% for category in project.categories.all %}
+                <li>{{ category.name }}</li>
+            {% endfor %}
+            </ul>
+        
+        {% endif %}
+</div><!-- main content -->
 {% endblock content %}
