Add pylint to requirements.

--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -12,7 +12,7 @@
   <div class="h6 p1 bg-blue white center caps">Work in Progress</div>
   <div class="container px2 py3">
     <div class="mb4">
-      <a href="/" class="h1 p0 btn items-center"><img src="/static/img/logo.png" class="align-middle" width="250"><span class="bold black">/projects</span></a>
+      <a href="/" class="h1 p0 btn"><img src="/static/img/logo.png" class="align-middle" width="250"><span class="bold black">/projects</span></a>
     </div>
     {% block content %}{% endblock %}
   </div>
