--- a/web/templates/web/project.html
+++ b/web/templates/web/project.html
@@ -4,26 +4,26 @@
 
 {% block content %}
 <div class="clearfix">
-        <h1>{{ project.name }}</h1>
-        <div class="h3">
-            {% if p.live_site_url %}
-                <a target="_blank" href="{{ p.live_site_url }}" class="black"><i class="icon ion-share"></i></a>
+        <section id="header-information" class="container px2 py4 overflow-hidden">
+            <h1>{{ project.name }}</h1>
+            <div class="h3">
+                  {% if project.live_site_url %}
+                      <a target="_blank" href="{{ project.live_site_url }}" class="black"><i class="icon ion-share"></i></a>&nbsp;
+                  {% endif %}
+                  {% if project.github_url %}
+                      <a target="_blank" href="{{ project.github_url }}" class="black"><i class="icon ion-code-working"></i></a>
+                  {% endif %}
+              </div>
+            {% if project.client %} 
+            <h3> Developed in partnership with <span class="bold underline">{{ project.client }}</span>.
+            </h3>
             {% endif %}
-            {% if p.github_url %}
-                <a target="_blank" href="{{ p.github_url }}" class="black">
-                    <i class="icon ion-code-working"></i>
-                </a>
-            {% endif %}
-        </div>
-        {% if p.client %} 
-        <h3> Developed in partnership with <span class="bold underline">{{ p.client }}</span>.
-        </h3>
-        {% endif %}
-        <div class="h3">{{ project.tagline }}</div>
-        
+            <div class="h3">{{ project.tagline }}</div>
+        </section>
         
         <section id="overview-data" class="container px2 py4 overflow-hidden">
             <h2>Overview</h2>
+            
             <div class="overflow-auto">
                 <table>
                     <thead>
@@ -70,7 +70,11 @@
                                 {% endif %}
                             </td>
                             <td>
-                                {{ project.rifans_number }}
+                                {% if project.rifans_number %}
+                                    {{ project.rifans_number }}
+                                {% else %}
+                                    None
+                                {% endif %}
                             </td>
                         </tr>
                     </tbody>
@@ -118,66 +122,12 @@
                         <li>{{ category.name }}</li>
                         {% endfor %}
                     </ul>
+                {% else %}
+                    None
         
                 {% endif %}
                 </p>
             </div>
         </section>
-        
-
-    <h4>Project Description</h4>
-    <p>{{ project.description }}</p>
-    <h4>Project Impact</h4>
-    <p>{{ project.impact }}</p>
-    <h4>Project Lead</h4>
-    <p>{{ project.project_lead }}</p>
-    <h4>Project Priority</h4>
-    <p> {{ project.get_priority_display }}</p>
-    
-    <h3>Level of Effort</h3>
-    <h4>State Tech Staff Effort</h4>
-    <p> Resources: {{ project.tech_effort }}</p>
-    <h4>State Agency Staff Effort</h4>
-    <p> Resources: {{ project.agency_effort }}</p>
-    <h4>Contractor Staff Effort</h4>
-    <p> Resources: {{ project.contractor_effort }}</p>
-    
-    <h3>Project Timeline</h3>
-    <h4>Projected or Actual Start Date</h4>
-    <p> {{ project.start_date }}</p>
-    <h4>Projected or Actual Go-Live Date</h4>
-    <p> {{ project.go_live_date }}</p>
-    
-    <h4>Blockers</h4>
-    <p> {{ project.blockers }}</p>
-    
-    {% if project.live_site_url %}
-    <h4>Live Site URL</h4>
-    <p> {{ project.live_site_url }}</p>
-    {% endif %}
-    
-    {% if project.github_url %}
-    <h4>GitHub Repository</h4>
-    <p> {{ project.github_url }}</p>
-    {% endif %}
-    
-    <h4>Billable</h4>
-    <p class="help_text">{{ project.is_billable.help_text }}</p>
-    <p> {{ project.is_billable }}</p>
-    <h4>Cloud.gov Project?</h4>
-    <p> {{ project.cloud_dot_gov }}</p>
-    <h4>RIFANS Account Number</h4>
-    <p> {{ project.rifans_number }}</p>
-    <h4>ETSS Business Unit</h4>
-    <p> {{ project.business_unit }}</p>
-    <h4>Project Categories</h4>
-        {% if project.categories %}
-            <ul>
-            {% for category in project.categories.all %}
-                <li>{{ category.name }}</li>
-            {% endfor %}
-            </ul>
-        
-        {% endif %}
 </div><!-- main content -->
 {% endblock content %}
