--- a/web/templates/web/project.html
+++ b/web/templates/web/project.html
@@ -3,9 +3,9 @@
 {% block title %} - {{project.name}} {% endblock title %}
 
 {% block content %}
-<div class="clearfix">
-        <section id="header-information" class="container px2 py4 overflow-hidden">
-            <h1>{{ project.name }}</h1>
+<div class="clearfix mt0">
+        <section id="header-information" class="left mt0 px2 py4">
+            <h1 class="inline block">{{ project.name }}</h1>
             <div class="h3">
                   {% if project.live_site_url %}
                       <a target="_blank" href="{{ project.live_site_url }}" class="black"><i class="icon ion-share"></i></a>&nbsp;
