Minor modifications to templates.

--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="{{ LANGUAGE_CODE|default:"en-us" }}">
 <head>
   <meta charset="utf-8">
   <title>Rhode Island Office of Digital Excellence{% block title %}{% endblock %}</title>
