--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -12,7 +12,7 @@
     <div class="column-4 border-box p2" style="height:253px">
       <div class="p2 bg-white border rounded">
         <a class="h4 caps bold mb1 block black" href="{% url 'web:project' p.pk %}">
-          <span class="right"><i class="icon ion-help-circled blue" alt="Click for more project information."></i></span>
+          <span class="right"><i class="icon ion-help-circled navy" alt="Click for more project information."></i></span>
           {% if p.name|length > 30 %}
             {{ p.name|slice:":35" }}...
           {% else %}
