--- a/web/templates/web/project.html
+++ b/web/templates/web/project.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="clearfix mt0">
-        <section id="header-information" class="left mt0 px2 py4">
+        <section id="header-information">
             <h1 id="project-name" class="inline block">{{ project.name }}</h1>
             <div id="live-github-urls" class="h3">
                   {% if project.live_site_url %}
