Fix project search. Small model change.

--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -20,7 +20,7 @@
     </div>
     <div class="column-4 mb0">
       <form class="right">
-        <label class="hide" for="q">Search</label>
+        <label class="hide" for="search">Search</label>
         <input type="text" id="q" name="q" value="{{ query }}" placeholder="Search for Projects">
         <button class="button h6 caps border bg-navy">Search</button>
       </form>
