Create custom template plugin for currency formatting.

--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -10,6 +10,7 @@
   <link href="/static/css/skull.min.css" rel="stylesheet">
 </head>
 <body>
+  {% load project_extras %}
   <div class="h6 p1 bg-navy white center caps bold">Work in Progress</div>
   <div class="container px2 py3">
     <header class="clearfix row">
