--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://raw.githubusercontent.com/basscss/addons/master/modules/progress/index.css">
   <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
   <link href="/static/css/skull.min.css" rel="stylesheet">
 </head>
