--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -30,22 +30,26 @@
     </header>
     {% block content %}
     {% endblock %}
-  <footer class="container px2 row center">
-    <div class="column-4 coa">
+  <footer class="py3 flex items-center center border rounded mxn2">
+    <div class="column-4 pxn2">
       <p><a href="http://www.ri.gov"><img src="http://www.vets.ri.gov/assets/img/statecoabw-footer.png" title="RI Logo" alt="ri.gov"/></a></p>
-    </div>
-    <div class="column-4">
-      An Official Rhode Island State Website - Status: Alpha
-    </div>
-    <div class="column-4">
+      <p>
     <script type="text/javascript">
 			  now=new Date();
 			  year=now.getFullYear(); 
 			 </script>&copy; 
     <script type="text/javascript">
         document.write(year);
-    </script> - Office of Digital Excellence, State of Rhode Island
-
+    </script> - Office of Digital Excellence<br />State of Rhode Island</p>
+    </div>
+    <div class="column-4 pxn2">
+      <p>An Official Rhode Island State Website <br />
+      </p>
+      
+    </div>
+    <div class="column-4 pxn2">
+      <p><span class="bold">Status:</span> Alpha</p>
+      <p><a href="https://github.com/401ode/projects"><i class="icon ion-social-github navy"></i></a></p>
     </div>
   </footer>
 
