Disable progress bar for now.

--- a/web/templates/web/project.html
+++ b/web/templates/web/project.html
@@ -21,9 +21,10 @@
             {% endif %}
             <div id="tagline" class="h3">{{ project.tagline }}</div>
             <div id="progress-bar">
-                <!-- Test Progress Completion Status -->
+                <!-- Test Progress Completion Status 
                 <h4>Progress</h4>
                 <progress value="{{ project.get_project_completion_percentage  }}" max="100" class="progress navy">{{ project.get_project_completion_percentage }}</progress>
+                -->
             </div>
         </section>
         
