Initial material design rebuild.

--- a/web/templates/web-v2/base.html
+++ b/web/templates/web-v2/base.html
@@ -20,7 +20,7 @@
                 <span class="mdl-layout__title"><img src="/static/img/logo.png" title="ODE Logo" width="175" /> Projects Dashboard</span>
             </div>
             <div class="mdl-layout__header-row">
-                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font section-content">
                     <a class="mdl-navigation__link {% if projects %}is-active{% endif %}" href="/">Projects</a>
                     <a class="mdl-navigation__link" href="about.html">About</a>
                     <a class="mdl-navigation__link" href="contact.html">Contact</a>
