First attempt using django-tables.

--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -9,6 +9,7 @@
   <link href="https://raw.githubusercontent.com/basscss/addons/master/modules/progress/index.css">
   <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
   <link href="/static/css/skull.min.css" rel="stylesheet">
+  {% block docheader %}{% endblock docheader %}
 </head>
 <body>
   {% load project_extras %}
