--- a/web/templates/web/project_list.html
+++ b/web/templates/web/project_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'web/base.html' %}
 {% load render_table from django_tables2 %}
 {% load static %}
 {% load project_extras %}
